--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,32 @@
 services:
   fastapi:
     ### Add build context instruction here
+    build:
+      context: .
+      dockerfile: Dockerfile
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://127.0.0.1:8000/healthz || (echo 'Healthcheck failed' && exit 1)"]
       interval: 10s
       timeout: 60s
       retries: 5
     ### Add environment variables here
+    environment:
+      DATABASE_URL: "postgresql://postgres:postgrespassword@postgres/tasksdb"
+      
     #ex. PATH = /user/local/bin    
     #ex. copy --from = builder
     #ex. ENV path = $PATH : /opp/.venv/bin
-    
+
     ### Add depends postgres here
+    depends_on:
+      - postgres
 
     ### expose ports here
+    expose:
+      - "8000"
+    ports:
+      - "8000:8000"
+
     volumes:
       - ./cc_compose:/app/cc_compose:Z
       - ./static:/app/static:Z
