--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
       # checkout code
       - uses: actions/checkout@v4
 
-#      # authenticate with GCP with workload identity provider
+      # authenticate with GCP with workload identity provider
       - uses: 'google-github-actions/auth@v2'
         id: auth
         name: Authenticate to GCP
@@ -77,17 +77,17 @@ jobs:
           project_id: 'project2-451820' # update with your project ID
           workload_identity_provider: 'projects/115023232642/locations/global/workloadIdentityPools/github/providers/serviceaccount' # update with your Workload Identity Pool
 
-#      # configure/login with docker
+      # configure/login with docker
       - name: gcloud Configure Docker
         run: gcloud auth configure-docker us-east1-docker.pkg.dev
 
-#      # setup docker buildx
+      # setup docker buildx
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/amd64,linux/arm64
 
-#      # build and push the image
+      # build and push the image
       - name: Build and Push
         uses: docker/build-push-action@v6
         with:
