--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,12 +87,12 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
 
-      # build and push the image
+#      # build and push the image
       - name: Build and Push
         uses: docker/build-push-action@v6
         with:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: us-east1-docker.pkg.dev/cc-spring2025/dansc0de/fastapi-server:v2
+          tags: us-east1-docker.pkg.dev/project2-451820/dockreg/fastapi-server:v2
 
