--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
         name: Authenticate to GCP
         with:
           project_id: 'project2-451820' # update with your project ID
-          workload_identity_provider: 'projects/115023232642/locations/global/workloadIdentityPools/github/providers/serviceaccount' # update with your Workload Identity Pool
+          workload_identity_provider: 'projects/115023232642/locations/global/workloadIdentityPools/github/providers/pitt-cs-1660' # update with your Workload Identity Pool
 
       # configure/login with docker
       - name: gcloud Configure Docker
@@ -94,5 +94,5 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: us-east1-docker.pkg.dev/project2-451820/dockreg
+          tags: us-east1-docker.pkg.dev/project2-451820/dockreg/fastapi-server:v2
 
